--- a/SmallHoneybee/SmallHoneybee.Wpf/Views/Shared/FileDialog.xaml
+++ b/SmallHoneybee/SmallHoneybee.Wpf/Views/Shared/FileDialog.xaml
@@ -3,22 +3,14 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:props="clr-namespace:SmallHoneybee.Wpf.Properties"
         Title="选择文件(.csv)" Height="120" Width="560"
-        Icon="/SmallHoneybee.Wpf;component/images/Safari.ico"
-        ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Icon="/SmallHoneybee.Wpf;component/images/ico_samllhoneybee.ico"
+        ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="SingleBorderWindow">
     <Window.Resources>
         <ResourceDictionary>
+            <RoutedUICommand x:Key="LoginButton" Text="Login" />
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/Resources/Button.xaml" />
-                <ResourceDictionary Source="/Resources/TextBox.xaml" />
-                <ResourceDictionary Source="/Resources/RadioButton.xaml" />
+                <ResourceDictionary Source="/Resources/Style.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            <Style x:Key="ButtonTStyle" BasedOn="{StaticResource ButtonStyle}" TargetType="{x:Type Button}">
-                <Setter Property="Height" Value="25">
-                </Setter>
-            </Style>
-            <Style TargetType="TextBlock">
-                <Setter Property="FontSize" Value="12"></Setter>
-            </Style>
         </ResourceDictionary>
     </Window.Resources>
     <Grid Width="560" Height="120" HorizontalAlignment="Center" VerticalAlignment="Center">
