--- a/SmallHoneybee/SmallHoneybee.Wpf/Views/MemberCard.xaml
+++ b/SmallHoneybee/SmallHoneybee.Wpf/Views/MemberCard.xaml
@@ -1,11 +1,11 @@
-﻿<Page x:Class="SmallHoneybee.Wpf.Views.User"
+﻿<Page x:Class="SmallHoneybee.Wpf.Views.MemberCard"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:props="clr-namespace:SmallHoneybee.Wpf.Properties"
       mc:Ignorable="d" 
-	 Title="会员管理">
+	 Title="健康卡管理">
     <Page.Resources>
         <RoutedUICommand x:Key="ClearSearchText" Text="Increase Font Size" />
         <RoutedUICommand x:Key="ExecuteSearchText" Text="Decrease Font Size" />
@@ -25,7 +25,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1000*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Grid.Column="0" Grid.Row="0" FontSize="16" FontWeight="Bold" HorizontalAlignment="Left" Margin="10,0,0,0">||会员管理</TextBlock>
+        <TextBlock Grid.Column="0" Grid.Row="0" FontSize="16" FontWeight="Bold" HorizontalAlignment="Left" Margin="10,0,0,0">||健康卡管理</TextBlock>
         <Grid Grid.Column="0" Grid.Row="1" HorizontalAlignment="Left" Margin="5">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
@@ -40,7 +40,7 @@
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
-            <TextBlock Grid.Column="0" Grid.Row="0" Text="会员编号/电话号码：" HorizontalAlignment="Right" VerticalAlignment="Center" ></TextBlock>
+            <TextBlock Grid.Column="0" Grid.Row="0" Text="健康卡编号：" HorizontalAlignment="Right" VerticalAlignment="Center" ></TextBlock>
             <TextBox Grid.Column="1" Grid.Row="0" Name="TxtSearchBox"></TextBox>
             <Button  Grid.Column="2" Grid.Row="0" Content="{x:Static props:Resources.Search}" Click="BtnSearch_Click"/>
             <Button  Grid.Column="3" Grid.Row="0" Content="清空" Click="BtnClear_Click" />
@@ -51,7 +51,7 @@
                   CanUserAddRows="True"
                   AutoGenerateColumns="False"
                   DataGridCell.GotFocus="DataGrid_CellGotFocus" 
-                  ItemsSource="{Binding Path=DataContext.Users, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}}" 
+                  ItemsSource="{Binding Path=DataContext.MemberCards, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}}" 
                   FontWeight="Medium">
             <DataGrid.Resources>
                 <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource CommonTextStyle}" >
@@ -62,19 +62,6 @@
                 </Style>
             </DataGrid.Resources>
             <DataGrid.Columns>
-                <DataGridTemplateColumn  Width="30">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <Image Name="ButDeleteSaleOrder"
-                                   Cursor="Hand"
-                                    Width="16"
-                                   ToolTip="关联会员卡"
-                                   Height="16" 
-                                   Source="/SmallHoneybee.Wpf;component/images/icoMemberCard.png">
-                            </Image>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
                 <DataGridTemplateColumn  Width="30">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -95,124 +82,90 @@
                                    Cursor="Hand"
                                     Width="16"
                                    Height="16"
-                                   ToolTip="删除"
                                    MouseDown="ButDeleteUser_Click" 
                                    Source="/SmallHoneybee.Wpf;component/images/icoDelete.png">
                             </Image>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTemplateColumn Header="会员编号" Width="90">
+                <DataGridTemplateColumn Header="编号" Width="90">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBox Text="{Binding UserNo, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" IsEnabled="False" ></TextBox>
+                            <TextBox Text="{Binding MemberCardNo, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"></TextBox>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTemplateColumn Header="姓名" Width="120">
+                <DataGridTemplateColumn Header="名称" Width="120">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" KeyDown="TextName_OnKeyDown"></TextBox>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTemplateColumn Header="会员电话" Width="120">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <TextBox Text="{Binding Phone, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" ></TextBox>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-                <DataGridTemplateColumn Header="性别" Width="60">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <ComboBox 
-                                SelectedValue="{Binding Sex, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" 
-                                SelectedValuePath="Key" 
-                                DisplayMemberPath="Value" 
-                                ItemsSource="{Binding Path=DataContext.SexTexts,
-                                    RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}}" 
-                                IsReadOnly="True"/>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-                <DataGridTemplateColumn Header="出生年月" Width="160" >
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <DatePicker Name="DateOfBirth"
-                                    SelectedDate="{Binding DateOfBirth,StringFormat='yyyy-MM-dd', UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"></DatePicker>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-                <DataGridTemplateColumn Header="会员卡类别" Width="100">
+                <DataGridTemplateColumn Header="类型" Width="120">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <ComboBox 
                                 SelectedValue="{Binding MemberType, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" 
                                 SelectedValuePath="Key" 
                                 DisplayMemberPath="Value" 
-                                ItemsSource="{Binding Path=DataContext.MemberTypeTexts,
+                                ItemsSource="{Binding Path=DataContext.MemberTypes,
                                     RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}}" 
                                 IsReadOnly="True"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTextColumn Header="会员卡余额" Width="90"  IsReadOnly="True"  Binding="{Binding CashTotal, StringFormat=F2}">
+                <DataGridTemplateColumn Header="初始金额" Width="60">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <TextBox Text="{Binding MemberMoney,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged,StringFormat=F2}"
+                                    Name="TxtQuantity"></TextBox>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTemplateColumn Header="激活日期" Width="160" >
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <DatePicker Name="DispatchDate"
+                                    SelectedDate="{Binding DispatchDate,StringFormat='yyyy-MM-dd', UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"></DatePicker>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTextColumn Header="操作人" Width="100" Binding="{Binding DispatchUser}">
+                </DataGridTextColumn>
+                <DataGridTextColumn Header="余额金额" Width="90"  IsReadOnly="True"  Binding="{Binding CashTotal, StringFormat=F2}">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="TextBlock">
                             <Setter Property="HorizontalAlignment" Value="Right"/>
                         </Style>
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
-                <DataGridTextColumn Header="会员卡积分" Width="90"  IsReadOnly="True" Binding="{Binding MemberPoints, StringFormat=F2}">
-                    <DataGridTextColumn.ElementStyle>
-                        <Style TargetType="TextBlock">
-                            <Setter Property="HorizontalAlignment" Value="Right"/>
-                        </Style>
-                    </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
-                <DataGridTemplateColumn Header="地址" Width="150">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <TextBox Text="{Binding Address, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" ></TextBox>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-                <DataGridTemplateColumn Header="微信" Width="80">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <TextBox Text="{Binding Weichat, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" ></TextBox>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-                <DataGridTemplateColumn Header="QQ" Width="80">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <TextBox Text="{Binding QqNo, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"  ></TextBox>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-                <DataGridTemplateColumn Header="Email" Width="80">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <TextBox Text="{Binding Email, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" ></TextBox>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-                <DataGridTemplateColumn Header="状态" Width="80">
+                <DataGridTemplateColumn Header="是否可用" Width="90" >
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <ComboBox 
-                                SelectedValue="{Binding Enable, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" 
+                                SelectedValue="{Binding IsEnable, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" 
                                 SelectedValuePath="Key" 
                                 DisplayMemberPath="Value" 
                                 ItemsSource="{Binding Path=DataContext.EnableTexts,
                                     RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}}" 
-                                IsReadOnly="True"/>
+                                />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTextColumn Header="创建时间" IsReadOnly="True"  Binding="{Binding CreatedOn,StringFormat=yyyy-MM-dd}"/>
+                <DataGridTemplateColumn Header="当前状态" Width="150">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <ComboBox 
+                                SelectedValue="{Binding MemberCardStatus, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" 
+                                SelectedValuePath="Key" 
+                                DisplayMemberPath="Value" 
+                                ItemsSource="{Binding Path=DataContext.MemberCardStatuses,
+                                    RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}}" 
+                                />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
                 <DataGridTemplateColumn Header="备注" Width="120">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -220,7 +173,7 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTextColumn Header="UserId" Binding="{Binding UserId}" Visibility="Hidden"/>
+                <DataGridTextColumn Header="MemberCardId" Binding="{Binding MemberCardId}" Visibility="Hidden"/>
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
