--- a/SmallHoneybee/SmallHoneybee.Wpf/Views/Shared/ChooseMassagebox.xaml
+++ b/SmallHoneybee/SmallHoneybee.Wpf/Views/Shared/ChooseMassagebox.xaml
@@ -2,25 +2,19 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:props="clr-namespace:SmallHoneybee.Wpf.Properties"
-        Title="关闭提示框" Height="160" Width="400" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" >
+        Icon="/SmallHoneybee.Wpf;component/images/ico_samllhoneybee.ico"
+        Title="关闭提示框" Height="170" Width="400" WindowStartupLocation="CenterScreen"
+        WindowStyle="SingleBorderWindow" ResizeMode="NoResize" >
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/Resources/Button.xaml" />
-                <ResourceDictionary Source="/Resources/RadioButton.xaml" />
+                <ResourceDictionary Source="/Resources/Style.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            <Style x:Key="ButtonTStyle" BasedOn="{StaticResource ButtonStyle}" TargetType="{x:Type Button}">
-                <Setter Property="Height" Value="25">
-                </Setter>
-            </Style>
-            <Style TargetType="TextBlock">
-                <Setter Property="FontSize" Value="12"></Setter>
-            </Style>
         </ResourceDictionary>
     </Window.Resources>
-    <Grid Background="#FFE7EAF3">
+    <Grid Background="#EBF2D8">
         <Grid.RowDefinitions>
-            <RowDefinition Height="0"></RowDefinition>
+            <RowDefinition Height="10"></RowDefinition>
             <RowDefinition MinHeight="125"></RowDefinition>
             <RowDefinition Height="25"></RowDefinition>
         </Grid.RowDefinitions>
@@ -29,31 +23,30 @@
         </Grid.ColumnDefinitions>
         <Grid Grid.Column="0" Grid.Row="1">
             <Grid.RowDefinitions>
-                <RowDefinition Height="30" />
-                <RowDefinition Height="20" />
-                <RowDefinition Height="30" />
-                <RowDefinition Height="33" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="80"/>
+                <ColumnDefinition Width="60"/>
                 <ColumnDefinition Width="6*"/>
                 <ColumnDefinition Width="73*"/>
             </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="1" Grid.Row="0" Text="您点击了退出小蜜蜂管理，您是想：" FontSize="13" 
-                           HorizontalAlignment="Left"  VerticalAlignment="Center" Grid.ColumnSpan="2" Margin="0,7,0,6"></TextBlock>
-            <RadioButton Grid.Column="1" Grid.Row="1" FontSize="12" GroupName="reportType" DataContext="1" IsChecked="True" x:Name="closeStyle"
-                             HorizontalAlignment="Left" VerticalAlignment="Center" Grid.ColumnSpan="2" Margin="0,3,0,2">隐藏到右小角的系统托盘</RadioButton>
+            <TextBlock Grid.Column="1" Grid.Row="0" Text="您点击了退出小蜜蜂管理，您是想："
+                          Grid.ColumnSpan="2" Margin="-20,5,0,5"></TextBlock>
+            <RadioButton Grid.Column="1" Grid.Row="1" GroupName="reportType" DataContext="1" IsChecked="True" x:Name="closeStyle"
+                             Grid.ColumnSpan="2" Margin="20,5,0,5">最小化至任务栏</RadioButton>
             <RadioButton Grid.Column="1" Grid.Row="2" FontSize="12" GroupName="reportType" DataContext="2" 
-                             HorizontalAlignment="Left" VerticalAlignment="Center" Grid.ColumnSpan="2" Margin="0,8,0,7">关闭小蜜蜂管理</RadioButton>
-            <StackPanel Grid.Column="2" Grid.Row="3" VerticalAlignment="Center"  HorizontalAlignment="Center"  Orientation="Horizontal" Margin="34,3,58,3">
-                <Button  x:Name="btnRegin"  Width="70" 
-                    Content="确定" FontSize="12" Margin="20,0,0,0"  Style="{StaticResource ButtonTStyle}" Click="btnRegin_Click">
+                             VerticalAlignment="Center" Grid.ColumnSpan="2" Margin="20,5,0,5">关闭小蜜蜂管理</RadioButton>
+            <StackPanel Grid.Column="2" Grid.Row="3"  Orientation="Horizontal" Margin="120,5,0,5">
+                <Button  x:Name="btnRegin" 
+                    Content="确定" Margin="20,0,0,0"   Click="btnRegin_Click">
                 </Button>
-                <Button  x:Name="btnClose" Width="70"
-                    Content="取消" FontSize="12"  Margin="20,0,0,0" Style="{StaticResource ButtonTStyle}" Click="btnClose_Click">
+                <Button  x:Name="btnClose" Width="50"
+                    Content="取消" Margin="20,0,0,0"  Click="btnClose_Click">
                 </Button>
             </StackPanel>
         </Grid>
-        <TextBlock Grid.Row="2" Margin="10,0,1,1" FontSize="14" FontWeight="Normal"  Foreground="#FF68B4F5" VerticalAlignment="Center"></TextBlock>
     </Grid>
 </Window>
